Fixed project settings for release on the Audio System project :qw

--- a/First3dEngineProj/Engine/CoreEngine/CoreEngine.vcxproj
+++ b/First3dEngineProj/Engine/CoreEngine/CoreEngine.vcxproj
@@ -44,6 +44,12 @@
     <IncludePath>../CoreEngine;../libs/freeglut/include/GL;../libs/glew-1.9.0/include/GL;$(IncludePath)</IncludePath>
     <SourcePath>../CoreEngine;../MathLib;$(VCInstallDir)atlmfc\src\mfc;$(VCInstallDir)atlmfc\src\mfcm;$(VCInstallDir)atlmfc\src\atl;$(VCInstallDir)crt\src;$(SourcePath)</SourcePath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <IncludePath>../CoreEngine;../libs/freeglut/include/GL;../libs/glew-1.9.0/include/GL;../MathLib;$(VCInstallDir)include;$(VCInstallDir)atlmfc\include;$(WindowsSdkDir)include;$(FrameworkSDKDir)\include;$(IncludePath)</IncludePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <SourcePath>../CoreEngine;../libs/freeglut/include/GL;../libs/glew-1.9.0/include/GL;../MathLib;$(VCInstallDir)atlmfc\src\mfc;$(VCInstallDir)atlmfc\src\mfcm;$(VCInstallDir)atlmfc\src\atl;$(VCInstallDir)crt\src;$(SourcePath)</SourcePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
